changed publish directory for frontend

--- a/render.yaml
+++ b/render.yaml
@@ -14,4 +14,4 @@ services:
     name: smart-email-frontend
     rootDir: frontend
     buildCommand: ""
-    staticPublishPath: frontend
+    publish: frontend
