--- a/render.yaml
+++ b/render.yaml
@@ -14,4 +14,4 @@ services:
     name: smart-email-frontend
     rootDir: frontend
     buildCommand: ""
-    publish: frontend
+    staticPublishPath: .
